fixed a yearly calendar layout problem and added yearly repeating events

--- a/resources/css/site-events.css
+++ b/resources/css/site-events.css
@@ -102,8 +102,8 @@
 }
 
 .big-calendar .event .time-and-title {
-	display: inline-block;
-	width: 800%;
+	max-height: 2em;
+	overflow: hidden;
 }
 
 .big-calendar .event .title {
